[package]
name = "mozim"
version = "0.2.6"
description = "DHCP Client Library"
license = "Apache-2.0"
repository = "https://github.com/nispor/mozim"
edition = "2021"

[lib]
name = "mozim"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.8.5", default-features = false }
libc = "0.2.132"
byteorder = "1.4.3"
dhcproto = "0.12.0"
log = "0.4.17"
etherparse = "0.13.0"
nix = { version = "0.29.0", features = ["poll", "time", "event"] }
nispor = "1.2.17"
futures = { version = "0.3", default-features = false, features = ["std"] }
ipnet = "2.11.0"

[dev-dependencies]
tokio = { version = "1.19", features = ["macros", "rt"] }
env_logger = "0.11.0"
