[package]
name = "mozim"
version = "0.3.0"
description = "DHCP Client Library"
license = "Apache-2.0"
repository = "https://github.com/nispor/mozim"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mozim"
path = "src/lib.rs"

[dependencies]
libc = "0.2.132"
log = "0.4.17"
etherparse = "0.19.0"
nix = { version = "0.30", features = ["poll", "time", "event", "socket", "fs"] }
rtnetlink = { version = "0.18.0", optional = true }
tokio = { version = "1.19", features = ["macros", "rt", "net", "time"] }

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.rand]
version = "0.9"
default-features = false
features = ["std", "std_rng", "thread_rng"]

[features]
default = ["netlink"]
netlink = ["dep:rtnetlink"]

[dev-dependencies]
env_logger = "0.11.0"
